[package]
name = "Masters"
version = "0.1.0"
edition = "2021"
[dependencies]
actix-web = "4.9.0"
uuid = { version = "1.2", features = ["v4"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
decimal = "2.1.0"
aws-sdk-dynamodb = "1.50.0"
aws-config = "1.5.7"
rust_decimal = "1.36.0"
serde_json = "1.0.128"
chrono = "0.4.38"
tokio = "1.40.0"
aws-types = "1.3.3"
